--- a/ee_import.ipynb
+++ b/ee_import.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "ee_import.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/maxjonasbehrens/master_thesis_code/blob/master/ee_import.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -156,34 +145,6 @@
       },
       "source": [
         "## Exploration"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "a5KAKR7AgaJf",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "1b60c473-e412-4ed2-fded-d967ac70ddcb"
-      },
-      "source": [
-        "# Reload missed images\n",
-        "mypath = \"/gdrive/My Drive/nuts_geotiff/\"\n",
-        "onlyfiles = [f.split('.')[0] for f in listdir(mypath) if isfile(join(mypath, f))]\n",
-        "print(onlyfiles)"
-      ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "['AL02_2016', 'AL02_2017', 'CZ05_2016', 'AT32_2016', 'AT32_2017', 'CZ05_2017', 'AT11_2017', 'AT11_2016', 'BG41_2016', 'BG41_2017', 'DE14_2016', 'DE14_2017', 'AT34_2016', 'BE10_2016', 'BE10_2017', 'AT34_2017', 'CZ08_2016', 'AT22_2016', 'CZ08_2017', 'AT22_2017', 'BG32_2016', 'BE24_2016', 'BE24_2017', 'BG32_2017', 'BE25_2017', 'CZ06_2016', 'BE25_2016', 'CZ06_2017', 'AT12_2016', 'AT13_2016', 'AT13_2017', 'AT12_2017', 'AT21_2016', 'AT21_2017', 'CZ03_2017', 'CZ01_2016', 'CZ01_2017', 'CZ03_2016', 'BE23_2016', 'BE33_2016', 'BE33_2017', 'BE23_2017', 'CZ07_2016', 'BE34_2016', 'BE34_2017', 'DE22_2016', 'DE22_2017', 'BE35_2016', 'BE35_2017', 'CZ07_2017', 'CZ04_2016', 'CZ04_2017', 'BG31_2016', 'BG31_2017', 'AL01_2016', 'AL01_2017', 'AT31_2016', 'AT31_2017', 'DE73_2016', 'DE73_2017', 'DE93_2016', 'DE93_2017', 'DE91_2016', 'DE91_2017', 'DE92_2016', 'DE92_2017', 'DE26_2016', 'DE26_2017', 'EL53_2016', 'EL53_2017', 'FR10_2016', 'FR10_2017', 'DE30_2016', 'DE30_2017', 'ES23_2017', 'HU11_2016', 'HU11_2017', 'ES23_2016', 'MK00_2017', 'MK00_2016', 'NL13_2017', 'NL13_2016', 'LT01_2016', 'LT01_2017', 'NL21_2016', 'NL22_2016', 'NL21_2017', 'NL22_2017', 'NL23_2016', 'NL23_2017', 'NL31_2017', 'NL31_2016', 'NL33_2016', 'NL42_2016', 'NL33_2017', 'LU00_2016', 'NL42_2017', 'LU00_2017', 'RO12_2016', 'RO12_2017', 'SI04_2016', 'PL51_2016', 'SI04_2017', 'PL51_2017', 'PL52_2016', 'PL52_2017', 'RO11_2016', 'RO11_2017', 'PL62_2016', 'PL62_2017', 'PL63_2016', 'RS22_2016', 'RS22_2017', 'PL43_2016', 'PL43_2017', 'PL63_2017', 'PL21_2017', 'PL21_2016', 'PL72_2016', 'PL72_2017', 'PL82_2017', 'RO32_2016', 'RO32_2017', 'RS11_2016', 'PL82_2016', 'RS11_2017', 'PL84_2016', 'PL84_2017', 'PL91_2016', 'RO41_2016', 'RO41_2017', 'RO42_2016', 'PL91_2017', 'HU31_2016', 'RO42_2017', 'HU12_2016', 'HU31_2017', 'HU12_2017', 'HU32_2016', 'HU32_2017', 'HU33_2016', 'HU33_2017', 'HU21_2016', 'HU21_2017', 'HU22_2016', 'HU22_2017', 'SK02_2016', 'SK02_2017', 'SK03_2016', 'TR82_2016', 'SK03_2017', 'TR83_2016', 'TR83_2017', 'TR63_2016', 'TR82_2017', 'TR63_2017', 'TR71_2016', 'TR81_2016', 'TR81_2017', 'TR21_2016', 'TR71_2017', 'TR21_2017', 'TR42_2016', 'TR42_2017', 'TR51_2016', 'TR51_2017', 'AL02_2010', 'AL02_2009', 'AL02_2008', 'AL02_2011', 'AL02_2012', 'AL02_2013', 'AL02_2014', 'CZ05_2008', 'CZ05_2009', 'AL02_2015', 'CZ05_2011', 'CZ05_2010', 'CZ05_2012', 'CZ05_2013', 'CZ05_2014', 'CZ05_2015', 'AT32_2008', 'AT32_2009', 'AT32_2010', 'AT32_2011', 'AT32_2014', 'AT32_2013', 'AT32_2012', 'AT32_2015', 'AT11_2008', 'AT11_2009', 'AT11_2010', 'AT11_2011', 'AT11_2013', 'AT11_2012', 'AT11_2014', 'BG41_2008', 'AT11_2015', 'BG41_2009', 'BG41_2011', 'BG41_2010', 'BG41_2013', 'BG41_2012', 'BG41_2014', 'BG41_2015', 'DE14_2009', 'DE14_2008', 'DE14_2010', 'DE14_2011', 'DE14_2013', 'DE14_2012', 'DE14_2014', 'AT34_2008', 'DE14_2015', 'AT34_2009', 'AT34_2010', 'AT34_2011', 'AT34_2013', 'AT34_2012', 'BE10_2009', 'BE10_2008', 'BE10_2010', 'AT34_2014', 'BE10_2011', 'BE10_2013', 'BE10_2012', 'BE10_2014', 'BE10_2015', 'AT34_2015', 'CZ08_2010', 'CZ08_2008', 'CZ08_2009', 'CZ08_2011', 'CZ08_2013', 'CZ08_2014', 'CZ08_2012', 'CZ08_2015', 'AT22_2008', 'AT22_2009', 'AT22_2010', 'AT22_2011', 'AT22_2012', 'AT22_2013', 'AT22_2014', 'AT22_2015', 'BG32_2008', 'BG32_2009', 'BG32_2011', 'BG32_2010', 'BG32_2012', 'BG32_2013', 'BE24_2008', 'BG32_2015', 'BE24_2009', 'BG32_2014', 'BE24_2010', 'BE24_2011', 'BE24_2012', 'BE24_2013', 'BE24_2014', 'BE24_2015', 'BE25_2008', 'BE25_2009', 'BE25_2010', 'BE25_2011', 'BE25_2012', 'BE25_2013', 'BE25_2015', 'BE25_2014', 'CZ06_2008', 'CZ06_2009', 'CZ06_2010', 'CZ06_2011', 'CZ06_2012', 'CZ06_2013', 'CZ06_2014', 'CZ06_2015', 'AT12_2008', 'AT12_2009', 'AT12_2012', 'AT12_2010', 'AT12_2014', 'AT13_2008', 'AT12_2015', 'AT13_2009', 'AT12_2011', 'AT13_2010', 'AT13_2011', 'AT13_2012', 'AT13_2013', 'AT13_2014', 'AT13_2015', 'AT12_2013', 'AT21_2010', 'AT21_2008', 'AT21_2009', 'AT21_2011', 'AT21_2013', 'AT21_2014', 'AT21_2015', 'AT21_2012', 'CZ03_2008', 'CZ03_2009', 'CZ03_2011', 'CZ03_2010', 'CZ03_2014', 'CZ03_2013', 'CZ01_2008', 'CZ03_2015', 'CZ01_2009', 'CZ01_2010', 'CZ01_2011', 'CZ01_2012', 'CZ01_2013', 'CZ01_2014', 'CZ01_2015', 'BE23_2008', 'CZ03_2012', 'BE23_2009', 'BE23_2010', 'BE23_2012', 'BE23_2011', 'BE23_2013', 'BE23_2014', 'BE33_2008', 'BE23_2015', 'BE33_2009', 'BE33_2010', 'BE33_2013', 'BE33_2011', 'BE33_2012', 'CZ07_2009', 'BE33_2014', 'CZ07_2008', 'BE33_2015', 'CZ07_2010', 'CZ07_2011', 'CZ07_2012', 'CZ07_2014', 'BE34_2008', 'CZ07_2015', 'BE34_2009', 'CZ07_2013', 'BE34_2011', 'BE34_2010', 'BE34_2013', 'BE34_2012', 'DE22_2008', 'BE34_2015', 'BE34_2014', 'DE22_2009', 'DE22_2012', 'DE22_2013', 'DE22_2010', 'DE22_2014', 'DE22_2015', 'BE35_2008', 'BE35_2009', 'BE35_2010', 'BE35_2011', 'BE35_2012', 'BE35_2013', 'BE35_2014', 'BE35_2015', 'CZ04_2008', 'CZ04_2009', 'CZ04_2010', 'CZ04_2011', 'CZ04_2012', 'CZ04_2013', 'CZ04_2014', 'CZ04_2015', 'ES24_2008', 'ES24_2009', 'ES24_2010', 'ES24_2012', 'ES24_2011', 'ES24_2013', 'ES24_2015', 'ES24_2014', 'BG31_2008', 'BG31_2010', 'BG31_2009', 'BG31_2011', 'BG31_2012', 'BG31_2014', 'BG31_2015', 'AL01_2008', 'BG31_2013', 'AL01_2009', 'AL01_2010', 'AL01_2011', 'AL01_2013', 'AL01_2012', 'AL01_2014', 'AL01_2015', 'AT31_2008', 'AT31_2009', 'AT31_2010', 'AT31_2011', 'AT31_2012', 'AT31_2014', 'AT31_2013', 'AT31_2015', 'DE73_2008', 'DE73_2009', 'DE73_2011', 'DE73_2012', 'DE73_2013', 'DE73_2010', 'DE73_2014', 'DE73_2015', 'DE93_2008', 'DE93_2009', 'DE93_2011', 'DE93_2012', 'DE93_2010', 'DE93_2013', 'DE93_2014', 'DE93_2015', 'DE91_2008', 'DE91_2009', 'DE91_2010', 'DE91_2011', 'DE91_2012', 'DE91_2013', 'DE91_2015', 'DE92_2008', 'DE91_2014', 'DE92_2010', 'DE92_2009', 'DE92_2011', 'DE92_2013', 'DE92_2012', 'DE92_2014', 'DE26_2008', 'DE26_2009', 'DE26_2010', 'DE92_2015', 'DE26_2012', 'DE26_2011', 'DE26_2013', 'DE26_2014', 'DE26_2015', 'EL53_2008', 'EL53_2009', 'EL53_2010', 'EL53_2011', 'EL53_2012', 'EL53_2013', 'EL53_2015', 'FR10_2008', 'FR10_2009', 'EL53_2014', 'FR10_2010', 'FR10_2011', 'FR10_2012', 'FR10_2013', 'FR10_2014', 'DE30_2008', 'DE30_2009', 'FR10_2015', 'DE30_2010', 'DE30_2013', 'DE30_2011', 'DE30_2012', 'DE30_2014', 'DE30_2015', 'ES43_2008', 'ES43_2009', 'ES43_2010', 'ES43_2011', 'ES43_2012', 'ES43_2013', 'ES43_2014', 'ES43_2015', 'ES23_2008', 'ES23_2010', 'ES23_2009', 'ES23_2011', 'ES23_2013', 'ES23_2014', 'ES23_2012', 'HR04_2008', 'HR04_2009', 'ES23_2015', 'HR04_2010', 'HR04_2011', 'HR04_2012', 'HR04_2013', 'HU11_2008', 'HU11_2009', 'HU11_2010', 'HU11_2011', 'HR04_2015', 'HU11_2012', 'HU11_2014', 'HU11_2013', 'HU11_2015', 'MK00_2008', 'MK00_2009', 'MK00_2010', 'MK00_2011', 'MK00_2013', 'MK00_2012', 'MK00_2015', 'MK00_2014', 'NL13_2008', 'NL13_2010', 'NL13_2011', 'NL13_2009', 'NL13_2012', 'NL13_2013', 'NL13_2014', 'DE22_2011', 'NL13_2015', 'LT01_2008', 'LT01_2009', 'LT01_2011', 'HR04_2014', 'LT01_2013', 'LT01_2014', 'LT01_2015', 'NL21_2008', 'NL21_2009', 'NL21_2010', 'NL21_2011', 'NL21_2012', 'NL21_2013', 'NL21_2015', 'NL21_2014', 'NL22_2008', 'NL22_2009', 'NL22_2010', 'NL22_2011', 'NL22_2013', 'NL22_2012', 'NL22_2014', 'NL22_2015', 'NL23_2008', 'NL23_2009', 'NL23_2010', 'NL23_2011', 'NL23_2012', 'NL23_2013', 'NL23_2014', 'NL23_2015', 'NL31_2008', 'NL31_2010', 'NL31_2009', 'NL31_2012', 'NL31_2011', 'NL31_2013', 'NL31_2014', 'NL31_2015', 'NL33_2008', 'NL33_2009', 'NL33_2010', 'NL33_2011', 'NL33_2012', 'NL33_2013', 'NL33_2014', 'NL33_2015', 'NL42_2008', 'NL42_2009', 'NL42_2010', 'NL42_2011', 'NL42_2012', 'NL42_2013', 'NL42_2014', 'NL42_2015', 'LU00_2008', 'LU00_2009', 'LU00_2010', 'LU00_2012', 'LU00_2011', 'LU00_2013', 'LU00_2015', 'LU00_2014', 'PL92_2009', 'PL92_2008', 'SI04_2008', 'RO32_2008', 'RO32_2009', 'RO32_2010', 'RS11_2012', 'RS11_2011', 'RS11_2013', 'RS11_2014', 'PL84_2008', 'RS11_2015', 'PL84_2009', 'PL84_2010', 'PL84_2011', 'PL84_2012', 'PL84_2013', 'PL84_2015', 'PL84_2014', 'PL91_2008', 'PL91_2010', 'PL91_2011', 'PL91_2009', 'PL91_2012', 'PL91_2015', 'PL91_2014', 'RO41_2008', 'RO41_2009', 'PL91_2013', 'RO41_2010', 'RO41_2011', 'RO41_2012', 'RO41_2013', 'RO41_2014', 'RO41_2015', 'RO42_2008', 'RO42_2009', 'RO42_2010', 'RO42_2011', 'RO42_2012', 'RO42_2014', 'RO42_2015', 'RO42_2013', 'HU31_2008', 'HU31_2009', 'HU31_2010', 'HU31_2011', 'HU31_2012', 'HU31_2013', 'HU31_2014', 'HU31_2015', 'HU12_2008', 'HU12_2009', 'HU12_2010', 'HU12_2011', 'HU12_2013', 'HU12_2012', 'HU12_2014', 'HU12_2015', 'HU32_2008', 'HU32_2009', 'HU32_2010', 'HU32_2011', 'HU32_2012', 'HU32_2013', 'HU32_2014', 'HU32_2015', 'HU33_2008', 'HU33_2009', 'HU33_2010', 'HU33_2011', 'HU33_2013', 'HU33_2012', 'HU33_2015', 'HU33_2014', 'HU21_2008', 'HU21_2009', 'HU21_2010', 'HU21_2011', 'HU21_2012', 'HU21_2013', 'HU21_2014', 'HU22_2008', 'HU21_2015', 'HU22_2010', 'HU22_2009', 'HU22_2011', 'HU22_2012', 'HU22_2013', 'HU22_2014', 'HU22_2015', 'SK02_2008', 'SK02_2009', 'SK02_2010', 'SK02_2011', 'SK02_2012', 'SK02_2013', 'SK02_2014', 'SK02_2015', 'SK03_2008', 'SK03_2009', 'SK03_2010', 'SK03_2011', 'SK03_2012', 'SK03_2013', 'SK03_2014', 'SK03_2015', 'TR82_2009', 'TR82_2008', 'TR82_2010', 'TR82_2011', 'TR82_2012', 'TR82_2013', 'TR82_2014', 'TR82_2015', 'TR83_2008', 'TR83_2009', 'TR83_2010', 'TR83_2011', 'TR83_2012', 'TR83_2013', 'TR83_2014', 'TR83_2015', 'TR63_2008', 'TR63_2009', 'TR63_2010', 'TR63_2012', 'TR63_2011', 'TR63_2013', 'TR63_2014', 'TR71_2008', 'TR63_2015', 'TR71_2010', 'TR71_2009', 'TR71_2011', 'TR71_2012', 'TR71_2013', 'TR71_2014', 'TR71_2015', 'TR72_2008', 'TR72_2009', 'TR72_2010', 'TR72_2011', 'TR72_2012', 'TR72_2013', 'TR72_2014', 'TR72_2015', 'TR81_2008', 'TR81_2010', 'TR81_2009', 'TR81_2011', 'TR81_2013', 'TR81_2014', 'TR81_2015', 'TR33_2008', 'TR33_2009', 'TR33_2010', 'TR33_2011', 'TR81_2012', 'TR33_2012', 'PL21_2015', 'TR33_2014', 'TR33_2015', 'TR21_2009', 'TR33_2013', 'TR21_2010', 'TR21_2011', 'TR21_2013', 'TR21_2014', 'TR21_2012', 'TR42_2008', 'TR42_2009', 'TR21_2015', 'TR42_2011', 'TR42_2012', 'TR42_2010', 'TR42_2013', 'TR21_2008', 'TR42_2014', 'TR51_2008', 'TR51_2009', 'TR42_2015', 'TR51_2011', 'TR51_2010', 'TR51_2012', 'TR51_2013', 'TR51_2014', 'TR51_2015', 'TR52_2009', 'TR52_2010', 'TR52_2011', 'TR52_2013', 'TR52_2008', 'TR52_2014', 'TR52_2015', 'TR52_2012']\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
