--- a/NeuralNetTrain/ee_import.ipynb
+++ b/NeuralNetTrain/ee_import.ipynb
@@ -91,24 +91,33 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 123
+          "height": 247
         },
-        "outputId": "b7b97d66-b76a-4d38-8a3c-2f8e9d85f699"
+        "outputId": "b250c6d8-d4ca-46a3-d476-2af441386a99"
       },
       "source": [
-        "!git clone https://github.com/maxjonasbehrens/master_thesis_code"
+        "#!git clone https://github.com/maxjonasbehrens/master_thesis_code\n",
+        "%cd /content/master_thesis_code\n",
+        "!git pull"
       ],
-      "execution_count": 1,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'master_thesis_code'...\n",
-            "remote: Enumerating objects: 90, done.\u001b[K\n",
-            "remote: Counting objects: 100% (90/90), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (65/65), done.\u001b[K\n",
-            "remote: Total 90 (delta 40), reused 63 (delta 23), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (90/90), done.\n"
+            "/content/master_thesis_code\n",
+            "remote: Enumerating objects: 11, done.\u001b[K\n",
+            "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (2/2), done.\u001b[K\n",
+            "remote: Total 6 (delta 4), reused 6 (delta 4), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (6/6), done.\n",
+            "From https://github.com/maxjonasbehrens/master_thesis_code\n",
+            "   835f9b5..a28a815  master     -> origin/master\n",
+            "Updating 835f9b5..a28a815\n",
+            "Fast-forward\n",
+            " .DS_Store                                  | Bin \u001b[31m10244\u001b[m -> \u001b[32m10244\u001b[m bytes\n",
+            " NeuralNetTrain/imgProcessing/sat_images.py |   5 \u001b[32m++++\u001b[m\u001b[31m-\u001b[m\n",
+            " 2 files changed, 4 insertions(+), 1 deletion(-)\n"
           ],
           "name": "stdout"
         }
@@ -122,7 +131,7 @@
         "colab": {}
       },
       "source": [
-        "%load master_thesis_code/NeuralNetTrain/imgProcessing/sat_images.py"
+        "%load /content/master_thesis_code/NeuralNetTrain/imgProcessing/sat_images.py"
       ],
       "execution_count": 0,
       "outputs": []
@@ -187,7 +196,7 @@
       },
       "source": [
         "# Download test image from drive\n",
-        "al01_2016_path = \"/gdrive/My Drive/nuts_night_all/DE22_2012.tif\"\n",
+        "al01_2016_path = \"/gdrive/My Drive/nuts_geotiff/DE22_2012.tif\"\n",
         "\n",
         "ds1, featuresAL01 = pyrsgis.raster.read(al01_2016_path)"
       ],
@@ -199,23 +208,22 @@
       "metadata": {
         "colab_type": "code",
         "id": "vGEELO3uujS5",
-        "outputId": "5bdf2945-7967-443f-8347-aea390904783",
+        "outputId": "c8230373-a89b-4cd9-cafb-fe1054b81e2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 34
         }
       },
       "source": [
         "# Print its shape\n",
         "print(\"AL01 shape: \",featuresAL01.shape)"
       ],
-      "execution_count": 22,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "AL01 shape:  (3588, 8325)\n",
-            "(3220, 4875)\n"
+            "AL01 shape:  (3, 3588, 8325)\n"
           ],
           "name": "stdout"
         }
@@ -226,14 +234,34 @@
       "metadata": {
         "colab_type": "code",
         "id": "lI2ifjFcIq_Z",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 400
+        },
+        "outputId": "0d061802-07aa-426a-f71f-603ec45e6709"
       },
       "source": [
         "# Test function\n",
-        "final_features = sat_images.prepocess_image(featuresAL01)"
+        "final_features = sat_images.preprocess_image(featuresAL01,night=False)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-73-2ac580b4013d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfinal_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msat_images\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocess_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeaturesAL01\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<string>\u001b[0m in \u001b[0;36mpreprocess_image\u001b[0;34m(image, night)\u001b[0m\n",
+            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mhstack\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/numpy/core/shape_base.py\u001b[0m in \u001b[0;36mhstack\u001b[0;34m(tup)\u001b[0m\n\u001b[1;32m    342\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0m_nx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    343\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 344\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_nx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    345\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    346\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -321,7 +349,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "1NURzseNL_yH",
-        "outputId": "b341a9b2-42ed-4de1-e359-81526deb999f",
+        "outputId": "686f7998-1cb1-4347-8247-28919ce375b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -332,7 +360,7 @@
         "y_dat = pd.read_csv(\"/gdrive/My Drive/ThesisData/Data/nuts_gdp_cleaned.csv\")\n",
         "y_dat.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -420,7 +448,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 42
         }
       ]
     },
@@ -433,7 +461,7 @@
       },
       "source": [
         "# List of all files in directory\n",
-        "mypath = \"/gdrive/My Drive/nuts_night_all/\"\n",
+        "mypath = \"/gdrive/My Drive/nuts_geotiff/\"\n",
         "onlyfiles = [f for f in listdir(mypath) if isfile(join(mypath, f))]"
       ],
       "execution_count": 0,
@@ -444,80 +472,38 @@
       "metadata": {
         "colab_type": "code",
         "id": "LHq0y4SCsQFp",
-        "outputId": "24fe5ab7-87ed-4693-fc9d-52dc9d527ca9",
+        "outputId": "3b29e0ec-afee-491f-91ef-17042cb6210b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 275
         }
       },
       "source": [
         "# PreProcess images with certain resolution\n",
         "res = 512\n",
-        "x,y,label = sat_images.create_data(onlyfiles,mypath,y_dat,resolution=res)"
+        "x,y,label = sat_images.create_data(onlyfiles,mypath,y_dat,resolution=res,night=False)"
       ],
-      "execution_count": 0,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Image processed:  0  of  558\n",
-            "Image processed:  10  of  558\n",
-            "Image processed:  20  of  558\n",
-            "Image processed:  30  of  558\n",
-            "Image processed:  40  of  558\n",
-            "Image processed:  50  of  558\n",
-            "Image processed:  60  of  558\n",
-            "Image processed:  70  of  558\n",
-            "Image processed:  80  of  558\n",
-            "Image processed:  90  of  558\n",
-            "Image processed:  100  of  558\n",
-            "Image processed:  110  of  558\n",
-            "Image processed:  120  of  558\n",
-            "Image processed:  130  of  558\n",
-            "Image processed:  140  of  558\n",
-            "Image processed:  150  of  558\n",
-            "Image processed:  160  of  558\n",
-            "Image processed:  170  of  558\n",
-            "Image processed:  180  of  558\n",
-            "Image processed:  190  of  558\n",
-            "Image processed:  200  of  558\n",
-            "Image processed:  210  of  558\n",
-            "Image processed:  220  of  558\n",
-            "Image processed:  230  of  558\n",
-            "Image processed:  240  of  558\n",
-            "Image processed:  250  of  558\n",
-            "Image processed:  260  of  558\n",
-            "Image processed:  270  of  558\n",
-            "Image processed:  280  of  558\n",
-            "Image processed:  290  of  558\n",
-            "Image processed:  300  of  558\n",
-            "Image processed:  310  of  558\n",
-            "Image processed:  320  of  558\n",
-            "Image processed:  330  of  558\n",
-            "Image processed:  340  of  558\n",
-            "Image processed:  350  of  558\n",
-            "Image processed:  360  of  558\n",
-            "Image processed:  370  of  558\n",
-            "Image processed:  380  of  558\n",
-            "Image processed:  390  of  558\n",
-            "Image processed:  400  of  558\n",
-            "Image processed:  410  of  558\n",
-            "Image processed:  420  of  558\n",
-            "Image processed:  430  of  558\n",
-            "Image processed:  440  of  558\n",
-            "Image processed:  450  of  558\n",
-            "Image processed:  460  of  558\n",
-            "Image processed:  470  of  558\n",
-            "Image processed:  480  of  558\n",
-            "Image processed:  490  of  558\n",
-            "Image processed:  500  of  558\n",
-            "Image processed:  510  of  558\n",
-            "Image processed:  520  of  558\n",
-            "Image processed:  530  of  558\n",
-            "Image processed:  540  of  558\n",
-            "Image processed:  550  of  558\n"
+            "Image processed:  0  of  910\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-56-3d2188f8c1d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m512\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msat_images\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monlyfiles\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmypath\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_dat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresolution\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<string>\u001b[0m in \u001b[0;36mcreate_data\u001b[0;34m(files, path, y_dat, resolution, night)\u001b[0m\n",
+            "\u001b[0;32m<string>\u001b[0m in \u001b[0;36mpreprocess_image\u001b[0;34m(image, night)\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+          ]
         }
       ]
     },
