--- a/NeuralNetTrain/ee_import.ipynb
+++ b/NeuralNetTrain/ee_import.ipynb
@@ -31,27 +31,23 @@
       "metadata": {
         "colab_type": "code",
         "id": "KnRwnXgRkXTH",
+        "outputId": "7f67822b-f806-4da4-8443-007913fb511d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
-        },
-        "outputId": "0148f330-d131-452e-b16c-6efbaeee95f9"
+          "height": 34
+        }
       },
       "source": [
         "# Mount Google Drice\n",
         "from google.colab import drive\n",
         "drive.mount('/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /gdrive\n"
+            "Drive already mounted at /gdrive; to attempt to forcibly remount, call drive.mount(\"/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -71,7 +67,7 @@
       "source": [
         "!pip install pyrsgis"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +97,7 @@
         "#%cd /content/master_thesis_code\n",
         "#!git pull"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +210,7 @@
         "# Print its shape\n",
         "print(\"Image shape: \",img.shape)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +252,7 @@
         "plt.imshow(orig_resized, interpolation='nearest')\n",
         "plt.show()"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -288,7 +284,7 @@
         "y_dat = pd.read_csv(\"/gdrive/My Drive/ThesisData/Data/enhanced_gdp_data.csv\")\n",
         "y_dat.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,17 +401,17 @@
       "metadata": {
         "id": "HYE5RQr87GXH",
         "colab_type": "code",
+        "outputId": "efcd067c-1e0f-4eee-fc0b-93e518d3c9dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "efcd067c-1e0f-4eee-fc0b-93e518d3c9dd"
+        }
       },
       "source": [
         "mae_diff = np.mean(abs(y_dat['diff_value']-y_dat['diff_value'].mean()))\n",
         "print(mae_diff)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +453,7 @@
         "res = 512\n",
         "x,y,label = sat_images.create_data(onlyfiles,mypath,y_dat,prediction='diff_value',resolution=res,night=True)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -583,7 +579,7 @@
         "print('Shape of y: ',len(y))\n",
         "print('Shape of labels: ', len(label))"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -611,7 +607,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "sTyG9Ew6mgrH",
-        "outputId": "3ab4aee6-fd65-475e-d0a0-f744bb6deaec",
+        "outputId": "44a827a3-4cc6-4e5b-a5ac-bc99773860e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -626,7 +622,7 @@
         "regions = np.unique(regions)\n",
         "print(len(regions))"
       ],
-      "execution_count": 12,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,7 +638,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "pBDk2TjtqEmw",
-        "outputId": "fc94ff81-63d0-4047-84d6-e8ae833d6936",
+        "outputId": "23158390-9cce-4058-9463-3a0dbbb57783",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -663,14 +659,14 @@
         "print(len(val_split))\n",
         "print(len(test_split))"
       ],
-      "execution_count": 22,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "72\n",
-            "24\n",
-            "21\n"
+            "77\n",
+            "17\n",
+            "23\n"
           ],
           "name": "stdout"
         }
@@ -681,7 +677,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "a8-L2N-XrKN3",
-        "outputId": "b1b00e28-eec4-4f8b-9a95-600e2e4fd6ba",
+        "outputId": "9cf51fc5-0341-40ae-ea71-f0217f3f5370",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -741,15 +737,15 @@
         "print(y_test.shape)\n",
         "print(x_val.shape)"
       ],
-      "execution_count": 23,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(426, 512, 512)\n",
-            "(126, 512, 512)\n",
-            "(126,)\n",
-            "(140, 512, 512)\n"
+            "(452, 512, 512)\n",
+            "(138, 512, 512)\n",
+            "(138,)\n",
+            "(102, 512, 512)\n"
           ],
           "name": "stdout"
         }
@@ -760,10 +756,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "aKRDGusTeNXU",
-        "outputId": "e3f5ff73-e11c-4f22-96ce-02f69fbe1ac7",
+        "outputId": "a3c492c4-a01a-405d-81fe-a88f3e8f45e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 70
         }
       },
       "source": [
@@ -771,20 +767,21 @@
         "x_train = np.array([x_train])\n",
         "x_train = np.moveaxis(x_train,0,-1)\n",
         "print(x_train.shape)\n",
-        "x_val = np.array([x_train])\n",
-        "x_train = np.moveaxis(x_train,0,-1)\n",
-        "print(x_train.shape)\n",
+        "x_val = np.array([x_val])\n",
+        "x_val = np.moveaxis(x_val,0,-1)\n",
+        "print(x_val.shape)\n",
         "x_test = np.array([x_test])\n",
         "x_test = np.moveaxis(x_test,0,-1)\n",
         "print(x_test.shape)"
       ],
-      "execution_count": 48,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(482, 512, 512, 1)\n",
-            "(210, 512, 512, 1)\n"
+            "(452, 512, 512, 1)\n",
+            "(102, 512, 512, 1)\n",
+            "(138, 512, 512, 1)\n"
           ],
           "name": "stdout"
         }
@@ -795,11 +792,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "blVC16VGw4af",
+        "outputId": "ef2f4001-ae04-4e40-9184-5b97ce14002e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
-        },
-        "outputId": "7ccba3db-68a9-43a5-da6e-51a608eb570d"
+        }
       },
       "source": [
         "# Deep Model\n",
@@ -838,7 +835,7 @@
         "model.add(tf.keras.layers.Dropout(0.5))\n",
         "model.add(tf.keras.layers.Dense(units=1, activation = 'linear'))"
       ],
-      "execution_count": 49,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +870,7 @@
         "preds=tf.keras.layers.Dense(units=1, activation = 'linear')(x)\n",
         "model=tf.keras.models.Model(inputs=base_model.input,outputs=preds)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -909,6 +906,7 @@
       "source": [
         "# Data Augmentation\n",
         "training_data_generator = tf.keras.preprocessing.image.ImageDataGenerator()\n",
+        "validation_data_generator = tf.keras.preprocessing.image.ImageDataGenerator()\n",
         "test_data_generator = tf.keras.preprocessing.image.ImageDataGenerator()"
       ],
       "execution_count": 0,
@@ -927,6 +925,7 @@
         "\n",
         "# Define the data flow\n",
         "training_generator = training_data_generator.flow(x_train,y_train,batch_size=batch_size)\n",
+        "validation_generator = validation_data_generator.flow(xv_in, yv_input,batch_size=batch_size)\n",
         "test_generator = test_data_generator.flow(x_test,y_test,batch_size=1,shuffle=False)"
       ],
       "execution_count": 0,
@@ -954,7 +953,7 @@
         "                    verbose = 1\n",
         "                   )"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1094,7 +1093,7 @@
         "print('Test MSE: '+str(test_score[1]))\n",
         "print('Test MAE: '+str(test_score[2]))"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
